# lughus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-please.yml
docs/: guarantees.md  overview.md
docs/api/: cli.md  gateway.md  llm.md  loop.md  server.md  tools.md
docs/architecture/: ADR-001-compatibility.md  ADR-002-streaming.md  ADR-003-runtime.md
docs/guides/: production.md  testing.md
docs/security/: error-disclosure.md
lughus/: __init__.py  _threading.py  cli.py  config.py  errors.py  events.py  gateway.py  llm.py  retry.py  server.py  telemetry.py  testing.py  tools.py  ui_server.py
lughus/loop/: __init__.py  _config.py  _execute.py  _loop.py  _result.py
lughus/ui/: test_ui.css  test_ui.html  test_ui.js
tests/: conftest.py  test_agent_loop.py  test_agent_loop_stream.py  test_cli.py  test_config.py  test_execute_tools.py  test_gateway.py  test_gateway_timeout.py  test_init.py  test_llm_retry.py  test_loop_result.py  test_new_audited_features.py  test_server.py  test_telemetry.py  test_tools.py
