[project]
name = "lughus"
version = "0.1.0"
description = "Micro-framework for building A2A agents with LiteLLM — agent loop, tool registry, A2A gateway."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "hdg-zero" },
]
keywords = ["agent", "a2a", "llm", "litellm", "agentic", "tool-calling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "litellm>=1.0,<2.0",
    "a2a-sdk>=0.3.0,<1.0",
    "python-dotenv",
    "fastapi",
    "orjson",
    "uvicorn[standard]",
    "starlette",
    "sse-starlette",
    "jsonschema>=4.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]

[project.scripts]
lughus = "lughus.cli:main"

[tool.setuptools.packages.find]
include = ["lughus*"]
exclude = ["scratch*", "tests*", "examples*"]

[tool.setuptools.package-data]
lughus = ["ui/*.html", "ui/*.css", "ui/*.js"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
